몇가지 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
             android:name=".ViewPagerExampleActivity"
             android:label="@string/title_activity_view_pager_example"
             android:theme="@style/AppTheme.NoActionBar">
-
+        </activity>
+        <activity android:name=".SpinnerActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
     </application>
 
