--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".ViewPagerExampleActivity"
             android:label="@string/title_activity_view_pager_example"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
         <activity android:name=".SpinnerActivity">
+        </activity>
+
+         <activity android:name=".DialogActivity">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
