--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ViewPagerExampleActivity"
+            android:name=".ViewPagerActivity"
             android:label="@string/title_activity_view_pager_example"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".SpinnerActivity"></activity>
         <activity android:name=".DialogActivity">
         </activity>
         <activity android:name=".GalleryFolderActivity">
+        </activity>
+        <activity android:name=".GalleryImageActivity">
+        </activity>
+        <activity android:name=".HorizontalImageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".GalleryImageActivity">
         </activity>
     </application>
 
