--- a/jsyang/build.gradle
+++ b/jsyang/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
+
 }
