--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -29,6 +30,8 @@
         <activity android:name=".HorizontalImageActivity">
         </activity>
         <activity android:name=".CameraActivity">
+        </activity>
+        <activity android:name=".RecorderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
