--- a/jsyang/build.gradle
+++ b/jsyang/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:recyclerview-v7:25.0.1'
-
+    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
 }
